client/src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
  background-color: #f2f2f2;
}

.movie-card {
  background-color: #fff;
  border: 0;
  box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
    0 2px 4px rgba(0, 0, 0, 0.24);
  padding: 1rem;
  cursor: pointer;
  position: relative;
  margin: 1rem auto;
}

.movie-top {
  display: flex;
  justify-content: space-between;
}

.edit-btn {
  width: 30px;
  height: 30px;
  margin: 15px;
}

.movie-director {
  padding: 4px 0;
  font-size: 0.8rem;
}

.saved-list {
  background-color: #fff;
  border: 0;
  box-shadow: 0 -1px 0 #e0e0e0, 0 0 2px rgba(0, 0, 0, 0.12),
    0 2px 4px rgba(0, 0, 0, 0.24);
  padding: 1rem;
  cursor: pointer;
  position: relative;
  margin: 1rem auto;
  width: 75%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.saved-list h3 {
  margin-right: 10px;
}

.saved-movie {
  margin: 0 10px;
}
.saved-active {
  color: blue;
  border: 1px solid grey;
  padding: 5px;
}
.save-wrapper {
  position: relative;
  width: 75%;
  margin: 1rem auto;
}
.save-button {
  position: absolute;
  top: 25px;
  right: 25px;
  border: 1px solid grey;
  padding: 5px 10px;
  background-color: lightseagreen;
}
.save-button:hover {
  background-color: green;
  color: white;
}

.home-button {
  padding: 5px 10px;
  background-color: lightskyblue;
}

.movie-warning {
  color: red;
  text-align: center;
}

/* update form */

.update-form {
  width: 50%;
  margin: 75px auto;
}

.update-title {
  text-align: center;
}

.form {
  display: flex;
  flex-direction: column;
  width: 300px;
  margin: auto;
}

.form-one-line {
  display: flex;
}

.pair {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.input-3-4 {
  width: 225px;
  margin: 10px 2px;
}

.input-1-4 {
  width: 60px;
  margin: 10px 2px;
}

.input {
  margin: 10px 0;
  width: 100%;
}

.update-btn {
  width: 75px;
  margin: 15px auto;
}

